Fix scrollbars on large screens

--- a/static/home/css/main.css
+++ b/static/home/css/main.css
@@ -80,7 +80,7 @@ nav {
     width: 100vw;
     background: linear-gradient(rgba(0, 0, 255, 0.5), rgba(255, 255, 0, 0.5)), url("../img/heart1.jpg") no-repeat center center;
     background-size: cover;
-    position: absolute;
+    position: fixed;
 }
 
 /*sign up heart*/
